# credit-risk-analysis-with-machine-learning

./: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  kind-config  locals.tf  main.tf  outputs.tf  pyproject.toml  terraform.tf
charts/cert-manager/: Chart.yaml
charts/istio/: Chart.yaml
charts/istio-gateway/: Chart.yaml
charts/istio-istiod/: Chart.yaml
charts/knative-eventing/: Chart.yaml
charts/knative-operator1/: Chart.yaml
charts/kserve/: Chart.yaml
charts/minio/: Chart.yaml
charts/minio-operator/: Chart.yaml
charts/minio-operator1/: Chart.yaml
charts/minio-tenant/: Chart.yaml
charts/nifi/: Chart.yaml
charts/nifikop/: Chart.yaml
charts/traefik/: Chart.yaml
modules/airflow/: locals.tf  main.tf  variables.tf
modules/argocd/: main.tf  variables.tf
modules/argocd_bootstrap/: locals.tf  main.tf
modules/cert-manager/: main.tf  variables.tf
modules/cp-schema-registry/: main.tf
modules/feast/: main.tf  variables.tf
modules/gitlab/: main.tf  variables.tf
modules/istio/: locals.tf  main.tf  variables.tf
modules/jupyterhub/: locals.tf  main.tf  variables.tf
modules/kafka/: main.tf
modules/kafka-ui/: main.tf  variables.tf
modules/keycloak/: locals.tf  main.tf  variables.tf
modules/knative/: locals.tf  main.tf  variables.tf
modules/kserve/: locals.tf  main.tf  variables.tf
modules/kube-prometheus-stack/: main.tf  variables.tf
modules/loki-stack/: locals.tf  main.tf  variables.tf
modules/metrics-server/: .terraform.lock.hcl  main.tf  variables.tf
modules/minio/: locals.tf  main.tf  outputs.tf  variables.tf
(+72 files in other folders)
